# riptide_controllers

./: CMakeLists.txt  README.md  package.xml  setup.py
action/: align.py  arc.py  calibrate.py  calibrateBuoyancy.py  calibrateDrag.py  gateManeuver.py  getDistance.py  goToDepth.py  goToPitch.py  goToRoll.py  goToTask.py  goToYaw.py  moveDistance.py  scriptOhio.py  shroudTest.py  sickTrick.py  thrusterTest.py  wait.py
cfg/: NewController.cfg  VehicleProperties.cfg  flip.csv  front_roll.csv  look_up_circle.csv  orbit.csv  spin_circle.csv  square.csv  twist.csv
include/riptide_controllers/: command_combinator.h  depth_controller.h  pwm_controller.h  thruster_controller.h
launch/: actions.launch  controller.launch  controller.launch.py  controllers.launch  new_controller.launch  new_controller.launch.py  pwm_controller.launch  quaternion_controller.launch  script_ohio.launch  thruster_controller.launch
riptide_controllers2/: Controllers.py  calibrate_buoyancy.py  calibrate_drag.py  controller.py  controller_working copy.py  controller_working.py  thruster_solver.py
riptide_controllers2/actions/: calibrate_buoyancy.py  calibrate_drag.py  thruster_test.py
scripts/: alignment_controller.py  attitude_controller.py  controller.py  linear_controller.cpp  linear_controller.py  quaternion_controller.py  test.py  thruster_solver.py
src/: command_combinator.cpp  depth_control_server.cpp  depth_controller.cpp  pwm_controller.cpp  thruster_controller.cpp
test/: depth_controller_test.py
