<?xml version="1.0"?>
<package format="2">
  <name>riptide_controllers</name>
  <version>0.0.1</version>
  <description>Package to store all code relating to the control of OSU's AUV.</description>

  <maintainer email="osu.uwrt@gmail.com">OSU UWRT</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/osu-uwrt/riptide_controllers</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>python3-yaml</depend>
  <depend>python3-numpy</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>moveit_msgs</depend>
  <depend>python3-scipy</depend>

</package>
